fixed white space on footer in mobile view

--- a/app/assets/stylesheets/spree/frontend/all.scss
+++ b/app/assets/stylesheets/spree/frontend/all.scss
@@ -41,6 +41,13 @@ footer, .push {
 	height: auto;
 }
 
+@media only screen and (max-width: 650px) { 
+  .footer-css { 
+    min-height: 548px;
+    height: auto; 
+  } 
+}
+
 .powered-by {
 	text-decoration: none;
 	color: red;
